syntax = "proto3";
package proto;

import "google/protobuf/empty.proto";

option java_multiple_files = true;


option csharp_namespace = "Proto.Generated.Api";
option java_package = "proto.generated.api";


import "proto/conf.proto";
import "proto/settings.proto";

/**
  API for communicate with the service
 */


service PCrossApi {
  rpc POpen (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc PClose (google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc PChangeConf (PConf) returns (google.protobuf.Empty);
  rpc PChangeSetting (PSettings) returns (google.protobuf.Empty);

  rpc PSetControls (PDeviceList) returns (google.protobuf.Empty);
  rpc PSetFans (PDeviceList) returns (google.protobuf.Empty);
  rpc PSetTemps (PDeviceList) returns (google.protobuf.Empty);

  rpc PUpdateControls (PUpdateList) returns (google.protobuf.Empty);
  rpc PUpdateTemps (PUpdateList) returns (google.protobuf.Empty);
  rpc PUpdateFans (PUpdateList) returns (google.protobuf.Empty);

}
















/**
  structure for fetch sensors info (controls/temps/fans)
 */

message PDevice {
  string PName = 1;
  string PId = 2;
}

message PDeviceList {
  repeated PDevice PDevices = 1;
}

/**
  structure for fetch sensors value (controls/temps/fans)
 */

message PUpdate {
  int32 PIndex = 1;
  int32 PValue = 2;
}

message PUpdateList {
  repeated PUpdate PUpdates = 1;
}