syntax = "proto3";

option java_outer_classname = "Updates";
option java_multiple_files = true;

option csharp_namespace = "Proto.Update";
option java_package = "external.proto.update";


message Update {
    int32 Index = 1;
    int32 Value = 2;
}

message UpdateList {
    repeated Update Update = 1;
}